ios/chrome/browser/ui/tab_switcher/tab_switcher_model.mm
@@ -211,25 +211,18 @@ void FillSetUsingSessions(synced_sessions::SyncedSessions const& sessions,
 }
 
 - (TabSwitcherSignInPanelsType)signInPanelType {
-  TabSwitcherSignInPanelsType panelType = TabSwitcherSignInPanelsType::NO_PANEL;
-  if (![self isSignedIn]) {
-    panelType = TabSwitcherSignInPanelsType::PANEL_USER_SIGNED_OUT;
+  if (![self isSignedIn] || [_delegate isSigninInProgress])
+    return TabSwitcherSignInPanelsType::PANEL_USER_SIGNED_OUT;
+  if (![self isSyncTabsEnabled])
+    return TabSwitcherSignInPanelsType::PANEL_USER_SIGNED_IN_SYNC_OFF;
+  if (_syncedSessions->GetSessionCount() != 0)
+    return TabSwitcherSignInPanelsType::NO_PANEL;
+  if ([self isFirstSyncCycleCompleted]) {
+    return TabSwitcherSignInPanelsType::
+        PANEL_USER_SIGNED_IN_SYNC_ON_NO_SESSIONS;
   } else {
-    if (![self isSyncTabsEnabled]) {
-      panelType = TabSwitcherSignInPanelsType::PANEL_USER_SIGNED_IN_SYNC_OFF;
-    } else {
-      if (_syncedSessions->GetSessionCount() == 0) {
-        if ([self isFirstSyncCycleCompleted]) {
-          panelType = TabSwitcherSignInPanelsType::
-              PANEL_USER_SIGNED_IN_SYNC_ON_NO_SESSIONS;
-        } else {
-          panelType = TabSwitcherSignInPanelsType::
-              PANEL_USER_SIGNED_IN_SYNC_IN_PROGRESS;
-        }
-      }
-    }
+    return TabSwitcherSignInPanelsType::PANEL_USER_SIGNED_IN_SYNC_IN_PROGRESS;
   }
-  return panelType;
 }
 
 - (void)syncedSessionsChanged {
